# langchain_postgres2

./: pyproject.toml  text_to_speech2.txt
src/langchain_postgres2/: .env  __init__.py  dodgy_results.txt  main.py
