[project]
name = "langhchain_postgres2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.2.11",
    "langchain-community>=0.3.10",
    "langchain>=0.3.10",
    "pymysql>=1.1.1",
    "cryptography>=44.0.0",
    "psycopg2-binary>=2.9.10",
    "psycopg2>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main.py"]

